examples/test/testpolicy18227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18227
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key36: value16
      key1: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value33
      podSelector:
        matchLabels:
          key9: value31
          key36: value5
